--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.webflux.hiddenmethod.filter.enabled=true;
-
+spring.webflux.hiddenmethod.filter.enabled=true
+spring.devtools.restart.exclude=
+spring.devtools.restart.enabled=true
+logging.level.web=DEBUG
