--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.webflux.hiddenmethod.filter.enabled=true
 spring.devtools.restart.exclude=
 spring.devtools.restart.enabled=true
 logging.level.web=DEBUG
+management.endpoint.health.show-details=always
+info.project.version=@project.version@
+info.java.version=@java.version@
+info.spring.framework.version=@spring-framework.version@
+info.spring.data.version=@spring-data-releasetrain.version@
+management.endpoints.web.exposure.include=auditevents,beans,caches,conditions,configprops,env,flyway,health,heapdump,httptrace,info,logfile,loggers,metrics,mappings,shutdown,threaddump
