--- a/pom.xml
+++ b/pom.xml
@@ -81,12 +81,9 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
+				<version>4.0.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
@@ -105,13 +102,34 @@
 						</configuration>
 					</execution>
 				</executions>
-				<!--dependencies>
+				<dependencies>
 					<dependency>
 						<groupId>org.springframework.restdocs</groupId>
-						<artifactId>spring-restdocs-asciidoctor</artifactId>
+						<artifactId>spring-restdocs-core</artifactId>
 						<version>${spring-restdocs.version}</version>
 					</dependency>
-				</dependencies1-->
+				</dependencies>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.7</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.outputDirectory}/static/docs</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.build.outputDirectory}/generated-docs</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
